=======
CHANGES
=======

1.5.3 (unreleased)
------------------

- Fixed Section meeting time misalignment in calendar (https://launchpad.net/bugs/611797)
- Added BooFieldDescription for boolean demographic fields


1.5.2 (2010-10-04)
------------------

- Activation of selected school year (https://launchpad.net/bugs/635160)
- Added "Add Multiple Persons" to Manage->Persons and "New Person" (for
  administration) to all other person views (https://launchpad.net/bugs/268127)
- Empty usernames no longer crash when adding a person (https://launchpad.net/bugs/644296)
- Replace access setting checkboxes with radio buttons (https://launchpad.net/bugs/638651)
- Fix security checks to let teachers edit learners and other section info
  if they have access rights.
- Add "View Person" action button in contact views (https://launchpad.net/bugs/635207)
- Update translations.

More info at https://launchpad.net/schooltool/+release/1.5.2


1.5.1 (2010-09-09)
------------------

- Tweaked WYSIWYG CK editor (https://launchpad.net/bugs/485446)
- Make CK editor work with servers under mod-rewrite (https://launchpad.net/bugs/258951)
- Update to work with latest ZTK (1.0a3)
- Renamed some classes and interfaces from Source to Vocabulary.
  This change is not backwards compatible, plugins may need updating.
- Added error checking on demographics edit form (https://launchpad.net/bugs/610870)
- Update translations.

More info at https://launchpad.net/schooltool/+release/1.5.1


1.5.0 (2010-07-13)
------------------

New features
++++++++++++

- Introduce minimalistic learning levels.
- Introduce versioned catalogs.
- Allow applying timetable for a part of the term only (https://launchpad.net/bugs/532428)
- TimeTable object now has consecutive_periods_as_one flag for use by journal

Bug fixes
+++++++++

- Speed up editing of section learners and instructors (https://launchpad.net/bugs/599258)